--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ nav ul li {
 	z-index: 1;
 	top: 0;
 	left: 0;
-	background: url(../images/banner-1.jpg) no-repeat bottom;
+	background: url(../images/background.jpg) no-repeat bottom;
 	background-size: cover;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
